2010-11-18 Riccardo Mottola

	* Modules/TimeZone/MapView.m
	* PreferencePanes/NSPreferencePane.m:

	Changed return value to NSUInteger to match NSObject

	* Modules/Fonts/FontModule.m:
	Fix memory leak.

2010-10-20 Riccardo Mottola

	* Modules/GNUmakefile
	Build internet module by default and install.

	* Modules/Internet/InternetModule.tiff
	Added icon for the Module (self-created).

2010-10-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Internet/InternetModule.m (-mainViewDidLoad): Select the
	default browser when the module is loaded.

	* Modules/Internet/InternetModule.m (-browserChanged:): Update the
	application with the URL scheme http and eventually https when the
	browser is changed, not any file type associations.


2010-10-19 Riccardo Mottola

	* Modules/Internet/InternetModule.m
	* Modules/Internet/InternetModule.h
	* Modules/Internet/InternetModuleInfo.plist
	* Modules/Internet/GNUmakefile
	* Modules/Internet/GNUmakefile.preamble
	* Modules/Internet/Resources/English.lproj/InternetModule.gorm
	Added internet module (browser selection).

2010-08-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist:
	Add NSMaximumRecentDocumentCount default.

2010-04-28 German Arias <german@xelalug.org>

	* Modules\Defaults\Resources\English.lproj\Defaults.plist:
	Added GSUseIconManager

2009-11-09 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Defaults\Resources\English.lproj\Defaults.plist:
	Changed the default name from the obsolete
	GSX11HandlesWindowDecorations to GSBackHandlesWindowDecorations

2009-10-30 Riccardo Mottola <rmottola@users.sf.net>

	* SystemPreferences: changed to use standard info panel
	and set release version to 1.1.0

2009-10-26 Riccardo Mottola <rmottola@users.sf.net>

	* Modules/Themes : initial commit
	
2009-05-23 Riccardo Mottola <rmottola@users.sf.net>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist: added live resizing of SplitViews
