@@ -5,7 +5,8 @@
 
 	Changed return value to NSUInteger to match NSObject
 
-	* Modules/Fonts/FontModule.m:
+	* Modules/Fonts/FontModule.m
+	* SystemPreferences/main.m:
 	Fix memory leak.
 
 2010-10-20 Riccardo Mottola
